Fix Java17 Specific issues and remove DESERT_HILLS (#296)